--- a/src/components/modules/ModalWindow/ModalWindow.module.scss
+++ b/src/components/modules/ModalWindow/ModalWindow.module.scss
@@ -8,6 +8,7 @@
   height: 100%;
   background: colors.$color-white-overlay;
   cursor: pointer;
+  z-index: 1000;
 }
 
 .ModalWindow {
@@ -21,6 +22,7 @@
   padding: 70px 0;
   background-color: colors.$color-white;
   transition: transform 0.8s;
+  z-index: 1500;
 
   &.active {
     transform: translateY(-50%);
